--- a/style.css
+++ b/style.css
@@ -14,15 +14,10 @@ body {
     background: rgb(38, 59, 58);
 }
 
-.button-container {
-
-    
-}
-
-#button {
+#start-button {
     font-family: 'Ranchers', cursive;
     cursor: pointer;
-    font-size: 3rem;
+    font-size: 4rem;
     padding: 2vh 2vw;
     border-radius: 10%;
     border: none;
@@ -34,10 +29,10 @@ body {
     transition: 0.2s ease;
 }
 
-#button:hover {
+#start-button:hover {
     color:rgb(38, 59, 58); 
 }
 
-#button:active {
-    transform: scale(0.9);
+#start-button:active {
+    transform: scale(0.94);
 }
